--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ÎæmCherry | Portfolio-Card</title>
-    <link rel="stylesheet" href="PortfolioCard.css">
+    <link rel="stylesheet" href="portfoliocard.css">
   </head>
   <body>
     <div class="card">
@@ -19,6 +19,6 @@
     </div>
   </div>
     </div>
-  <script src="PortfolioCard.js"></script>
+  <script src="portfoliocard.js"></script>
   </body>
 </html>
