--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button class="btn" onclick="openGithub()"><img src="images/66713a96b9b21dffd3a85a5d748a3171-removebg-preview.png" width="40px"></button>
       <button class="btn" onclick="openX()"><img src="images/f66890653a1275aa5b742387233f4243-removebg-preview.png" width="40px"></button>
       <button class="btn" onclick="openLinkedln()"><img src="images/e92832c31191b55137f720580f26804f-removebg-preview.png" width="35px"></button>
-      <button class="btn" onclick="hireMe()"><img src="images/fc25149fa2d93dd8660d79f48020efc8-removebg-preview.png" width="40px"><a href="mailto: treasurecherish4life@gmail.com.com?subject=Portfolio%20Contact&body=Hi%20Cherry,"></button>
+      <button class="btn" onclick="hireMe()"><img src="images/fc25149fa2d93dd8660d79f48020efc8-removebg-preview.png" width="40px"></button>
     </div>
   </div>
     </div>
